syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "multiplixe.usuarios.perfil.grpc.Protos";

package multiplixe.usuarios.perfil.grpc.Protos;

service Perfil {
	rpc Obter(PerfilFiltro) returns (PerfilResponse);
	rpc Registrar(PerfilMessage) returns (PerfilResponse);
	rpc ObterPerfisConectados(PerfilFiltro) returns (PerfilConectadoResponse);
	rpc ObterAccessToken(AccessTokenRequest) returns (AccessTokenResponse);
}

message PerfilFiltro {
	string EmpresaId = 1;
	int32 RedeSocial = 2;
	string PerfilId = 3;
	string UsuarioId = 4;
}

message PerfilMessage {
	string EmpresaId = 1;
	string UsuarioId = 2;
	string PerfilId = 3;
	string Nome = 4;
	int32 RedeSocial = 5;
	bool Ativo = 6;
	int64 DataCadastro = 7;
	google.protobuf.StringValue Token = 8;
	google.protobuf.StringValue ImagemUrl = 9;
	google.protobuf.StringValue Login = 10;
	int64 ExpiracaoToken = 11;
}
 
message PerfilResponse {
	int32 HttpStatusCode = 1;
	PerfilMessage Perfil = 2;
}


message PerfilConectadoResponse {
	int32 HttpStatusCode = 1;
	repeated PerfilMessage Perfis = 2;
	bool TemConexao = 3;
}

message AccessTokenRequest {
	string UsuarioId = 1;
	int32 RedeSocial = 2;
}

message AccessTokenResponse {
	int32 HttpStatusCode = 1;
	string Token = 2;
}